[gd_scene load_steps=37 format=3 uid="uid://btdousdmcb6d3"]

[ext_resource type="Script" path="res://game.gd" id="1_2km4d"]
[ext_resource type="Texture2D" uid="uid://cvi6aad8v1ow8" path="res://assets/table/river.png" id="2_d61yp"]
[ext_resource type="Texture2D" uid="uid://sr30u1imc127" path="res://assets/table/table.png" id="3_uvdwv"]
[ext_resource type="PackedScene" uid="uid://cr6fktifdg2pi" path="res://ui/dialogue_system.tscn" id="4_sixhk"]
[ext_resource type="Script" path="res://player_textboxes.gd" id="5_6g64w"]
[ext_resource type="PackedScene" uid="uid://bedblkbwue803" path="res://ui/textbox.tscn" id="5_703wq"]
[ext_resource type="Script" path="res://ui/flip_button.gd" id="6_rf73a"]
[ext_resource type="Script" path="res://ui/accept_button.gd" id="7_2acd8"]
[ext_resource type="Shader" path="res://shaders/shader.gdshader" id="7_aonp5"]
[ext_resource type="Script" path="res://ui/shop_continue_button.gd" id="8_leu43"]
[ext_resource type="Script" path="res://ui/shop_reroll_button.gd" id="9_cd2hg"]
[ext_resource type="Script" path="res://ui/end_round_button.gd" id="9_d50av"]
[ext_resource type="Script" path="res://ui/die_button.gd" id="10_oe7lm"]
[ext_resource type="Script" path="res://ui/pay_toll_button.gd" id="11_mcnia"]
[ext_resource type="Script" path="res://ui/voyage/voyage_continue_button.gd" id="12_dxqog"]
[ext_resource type="Script" path="res://ui/board_button.gd" id="13_6rw3p"]
[ext_resource type="FontFile" uid="uid://dgfoet7uiqnul" path="res://assets/fonts/alagard.ttf" id="14_om374"]
[ext_resource type="Script" path="res://ui/lives_label.gd" id="15_wj7tb"]
[ext_resource type="Script" path="res://ui/fragments_label.gd" id="16_ee6yk"]
[ext_resource type="Script" path="res://active_power_label.gd" id="17_uno8g"]
[ext_resource type="PackedScene" uid="uid://dgds4d2p6hdb6" path="res://ui/voyage/voyage.tscn" id="18_vo2di"]
[ext_resource type="PackedScene" uid="uid://kw0850n3cqvo" path="res://components/coin_row.tscn" id="19_ym3ga"]
[ext_resource type="Script" path="res://trial.gd" id="20_kmro7"]
[ext_resource type="Script" path="res://ui/shop.gd" id="20_xqqdj"]
[ext_resource type="Script" path="res://components/coin_row.gd" id="21_60gfb"]
[ext_resource type="PackedScene" uid="uid://bkl5p2djoo52i" path="res://components/coin.tscn" id="22_nqi2l"]
[ext_resource type="PackedScene" uid="uid://bcwxsw4cf46jj" path="res://components/patron_tokens/zeus.tscn" id="24_k7xdm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_haovj"]
resource_local_to_scene = true
shader = ExtResource("7_aonp5")
shader_parameter/replace_color1 = Vector3(0, 0, 0)
shader_parameter/replace_with_color1 = Vector3(0, 0, 0)
shader_parameter/replace_color2 = Vector3(0, 0, 0)
shader_parameter/replace_with_color2 = Vector3(0, 0, 0)
shader_parameter/replace_color3 = Vector3(0, 0, 0)
shader_parameter/replace_with_color3 = Vector3(0, 0, 0)
shader_parameter/replace_color4 = Vector3(0, 0, 0)
shader_parameter/replace_with_color4 = Vector3(0, 0, 0)
shader_parameter/replace_color5 = Vector3(0, 0, 0)
shader_parameter/replace_with_color5 = Vector3(0, 0, 0)
shader_parameter/tint_color = Vector3(0, 0, 0)
shader_parameter/tint_strength = 0.0
shader_parameter/use_exclude_tint = false
shader_parameter/exclude_tint = Vector3(0, 0, 0)
shader_parameter/pan_speed = Vector2(0, 0)
shader_parameter/transparency = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b0irk"]
resource_local_to_scene = true
shader = ExtResource("7_aonp5")
shader_parameter/replace_color1 = Vector3(0, 0, 0)
shader_parameter/replace_with_color1 = Vector3(0, 0, 0)
shader_parameter/replace_color2 = Vector3(0, 0, 0)
shader_parameter/replace_with_color2 = Vector3(0, 0, 0)
shader_parameter/replace_color3 = Vector3(0, 0, 0)
shader_parameter/replace_with_color3 = Vector3(0, 0, 0)
shader_parameter/replace_color4 = Vector3(0, 0, 0)
shader_parameter/replace_with_color4 = Vector3(0, 0, 0)
shader_parameter/replace_color5 = Vector3(0, 0, 0)
shader_parameter/replace_with_color5 = Vector3(0, 0, 0)
shader_parameter/tint_color = Vector3(0, 0, 0)
shader_parameter/tint_strength = 0.0
shader_parameter/use_exclude_tint = false
shader_parameter/exclude_tint = Vector3(0, 0, 0)
shader_parameter/pan_speed = Vector2(0, 0)
shader_parameter/transparency = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gj37d"]
resource_local_to_scene = true
shader = ExtResource("7_aonp5")
shader_parameter/replace_color1 = Vector3(0, 0, 0)
shader_parameter/replace_with_color1 = Vector3(0, 0, 0)
shader_parameter/replace_color2 = Vector3(0, 0, 0)
shader_parameter/replace_with_color2 = Vector3(0, 0, 0)
shader_parameter/replace_color3 = Vector3(0, 0, 0)
shader_parameter/replace_with_color3 = Vector3(0, 0, 0)
shader_parameter/replace_color4 = Vector3(0, 0, 0)
shader_parameter/replace_with_color4 = Vector3(0, 0, 0)
shader_parameter/replace_color5 = Vector3(0, 0, 0)
shader_parameter/replace_with_color5 = Vector3(0, 0, 0)
shader_parameter/tint_color = Vector3(0, 0, 0)
shader_parameter/tint_strength = 0.0
shader_parameter/use_exclude_tint = false
shader_parameter/exclude_tint = Vector3(0, 0, 0)
shader_parameter/pan_speed = Vector2(0, 0)
shader_parameter/transparency = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o7qn4"]
resource_local_to_scene = true
shader = ExtResource("7_aonp5")
shader_parameter/replace_color1 = Vector3(0, 0, 0)
shader_parameter/replace_with_color1 = Vector3(0, 0, 0)
shader_parameter/replace_color2 = Vector3(0, 0, 0)
shader_parameter/replace_with_color2 = Vector3(0, 0, 0)
shader_parameter/replace_color3 = Vector3(0, 0, 0)
shader_parameter/replace_with_color3 = Vector3(0, 0, 0)
shader_parameter/replace_color4 = Vector3(0, 0, 0)
shader_parameter/replace_with_color4 = Vector3(0, 0, 0)
shader_parameter/replace_color5 = Vector3(0, 0, 0)
shader_parameter/replace_with_color5 = Vector3(0, 0, 0)
shader_parameter/tint_color = Vector3(0, 0, 0)
shader_parameter/tint_strength = 0.0
shader_parameter/use_exclude_tint = false
shader_parameter/exclude_tint = Vector3(0, 0, 0)
shader_parameter/pan_speed = Vector2(0, 0)
shader_parameter/transparency = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t7w6r"]
resource_local_to_scene = true
shader = ExtResource("7_aonp5")
shader_parameter/replace_color1 = Vector3(0, 0, 0)
shader_parameter/replace_with_color1 = Vector3(0, 0, 0)
shader_parameter/replace_color2 = Vector3(0, 0, 0)
shader_parameter/replace_with_color2 = Vector3(0, 0, 0)
shader_parameter/replace_color3 = Vector3(0, 0, 0)
shader_parameter/replace_with_color3 = Vector3(0, 0, 0)
shader_parameter/replace_color4 = Vector3(0, 0, 0)
shader_parameter/replace_with_color4 = Vector3(0, 0, 0)
shader_parameter/replace_color5 = Vector3(0, 0, 0)
shader_parameter/replace_with_color5 = Vector3(0, 0, 0)
shader_parameter/tint_color = Vector3(0, 0, 0)
shader_parameter/tint_strength = 0.0
shader_parameter/use_exclude_tint = false
shader_parameter/exclude_tint = Vector3(0, 0, 0)
shader_parameter/pan_speed = Vector2(0, 0)
shader_parameter/transparency = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2x70x"]
resource_local_to_scene = true
shader = ExtResource("7_aonp5")
shader_parameter/replace_color1 = Vector3(0, 0, 0)
shader_parameter/replace_with_color1 = Vector3(0, 0, 0)
shader_parameter/replace_color2 = Vector3(0, 0, 0)
shader_parameter/replace_with_color2 = Vector3(0, 0, 0)
shader_parameter/replace_color3 = Vector3(0, 0, 0)
shader_parameter/replace_with_color3 = Vector3(0, 0, 0)
shader_parameter/replace_color4 = Vector3(0, 0, 0)
shader_parameter/replace_with_color4 = Vector3(0, 0, 0)
shader_parameter/replace_color5 = Vector3(0, 0, 0)
shader_parameter/replace_with_color5 = Vector3(0, 0, 0)
shader_parameter/tint_color = Vector3(0, 0, 0)
shader_parameter/tint_strength = 0.0
shader_parameter/use_exclude_tint = false
shader_parameter/exclude_tint = Vector3(0, 0, 0)
shader_parameter/pan_speed = Vector2(0, 0)
shader_parameter/transparency = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7gvcv"]
resource_local_to_scene = true
shader = ExtResource("7_aonp5")
shader_parameter/replace_color1 = Vector3(0, 0, 0)
shader_parameter/replace_with_color1 = Vector3(0, 0, 0)
shader_parameter/replace_color2 = Vector3(0, 0, 0)
shader_parameter/replace_with_color2 = Vector3(0, 0, 0)
shader_parameter/replace_color3 = Vector3(0, 0, 0)
shader_parameter/replace_with_color3 = Vector3(0, 0, 0)
shader_parameter/replace_color4 = Vector3(0, 0, 0)
shader_parameter/replace_with_color4 = Vector3(0, 0, 0)
shader_parameter/replace_color5 = Vector3(0, 0, 0)
shader_parameter/replace_with_color5 = Vector3(0, 0, 0)
shader_parameter/tint_color = Vector3(0, 0, 0)
shader_parameter/tint_strength = 0.0
shader_parameter/use_exclude_tint = false
shader_parameter/exclude_tint = Vector3(0, 0, 0)
shader_parameter/pan_speed = Vector2(0, 0)
shader_parameter/transparency = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ea1q6"]
resource_local_to_scene = true
shader = ExtResource("7_aonp5")
shader_parameter/replace_color1 = Vector3(0, 0, 0)
shader_parameter/replace_with_color1 = Vector3(0, 0, 0)
shader_parameter/replace_color2 = Vector3(0, 0, 0)
shader_parameter/replace_with_color2 = Vector3(0, 0, 0)
shader_parameter/replace_color3 = Vector3(0, 0, 0)
shader_parameter/replace_with_color3 = Vector3(0, 0, 0)
shader_parameter/replace_color4 = Vector3(0, 0, 0)
shader_parameter/replace_with_color4 = Vector3(0, 0, 0)
shader_parameter/replace_color5 = Vector3(0, 0, 0)
shader_parameter/replace_with_color5 = Vector3(0, 0, 0)
shader_parameter/tint_color = Vector3(0, 0, 0)
shader_parameter/tint_strength = 0.0
shader_parameter/use_exclude_tint = false
shader_parameter/exclude_tint = Vector3(0, 0, 0)
shader_parameter/pan_speed = Vector2(0, 0)
shader_parameter/transparency = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2hlmn"]
resource_local_to_scene = true
shader = ExtResource("7_aonp5")
shader_parameter/replace_color1 = Vector3(0, 0, 0)
shader_parameter/replace_with_color1 = Vector3(0, 0, 0)
shader_parameter/replace_color2 = Vector3(0, 0, 0)
shader_parameter/replace_with_color2 = Vector3(0, 0, 0)
shader_parameter/replace_color3 = Vector3(0, 0, 0)
shader_parameter/replace_with_color3 = Vector3(0, 0, 0)
shader_parameter/replace_color4 = Vector3(0, 0, 0)
shader_parameter/replace_with_color4 = Vector3(0, 0, 0)
shader_parameter/replace_color5 = Vector3(0, 0, 0)
shader_parameter/replace_with_color5 = Vector3(0, 0, 0)
shader_parameter/tint_color = Vector3(0, 0, 0)
shader_parameter/tint_strength = 0.0
shader_parameter/use_exclude_tint = false
shader_parameter/exclude_tint = Vector3(0, 0, 0)
shader_parameter/pan_speed = Vector2(0, 0)
shader_parameter/transparency = 1.0

[node name="Game" type="Node2D"]
script = ExtResource("1_2km4d")

[node name="RiverBG" type="Sprite2D" parent="."]
texture = ExtResource("2_d61yp")
centered = false

[node name="TableBG" type="Sprite2D" parent="."]
texture = ExtResource("3_uvdwv")
centered = false

[node name="UI" type="Node2D" parent="."]

[node name="DialogueSystem" parent="UI" instance=ExtResource("4_sixhk")]
z_index = 100
position = Vector2(0, 2)
text_color = Color(0.737255, 0.290196, 0.607843, 1)
border_color = Color(0.909804, 0.415686, 0.45098, 1)
textbox_float = true

[node name="PlayerTextboxes" type="HBoxContainer" parent="UI"]
z_index = 1
offset_left = 6.0
offset_top = 156.0
offset_right = 314.0
offset_bottom = 172.0
pivot_offset = Vector2(154, 8)
alignment = 1
script = ExtResource("5_6g64w")

[node name="TossButton" parent="UI/PlayerTextboxes" instance=ExtResource("5_703wq")]
visible = false
material = SubResource("ShaderMaterial_haovj")
custom_minimum_size = Vector2(41, 0)
layout_mode = 2
script = ExtResource("6_rf73a")

[node name="TextMargin" parent="UI/PlayerTextboxes/TossButton" index="1"]
size_flags_horizontal = 1

[node name="Text" parent="UI/PlayerTextboxes/TossButton/TextMargin" index="0"]
size_flags_horizontal = 1
text = "[center]Toss[/center]"

[node name="AcceptButton" parent="UI/PlayerTextboxes" instance=ExtResource("5_703wq")]
visible = false
material = SubResource("ShaderMaterial_b0irk")
layout_mode = 2
script = ExtResource("7_2acd8")

[node name="Text" parent="UI/PlayerTextboxes/AcceptButton/TextMargin" index="0"]
text = "Accept"

[node name="ShopContinueButton" parent="UI/PlayerTextboxes" instance=ExtResource("5_703wq")]
visible = false
material = SubResource("ShaderMaterial_gj37d")
layout_mode = 2
script = ExtResource("8_leu43")

[node name="Text" parent="UI/PlayerTextboxes/ShopContinueButton/TextMargin" index="0"]
text = "Continue"

[node name="ShopRerollButton" parent="UI/PlayerTextboxes" instance=ExtResource("5_703wq")]
visible = false
material = SubResource("ShaderMaterial_o7qn4")
layout_mode = 2
script = ExtResource("9_cd2hg")

[node name="Text" parent="UI/PlayerTextboxes/ShopRerollButton/TextMargin" index="0"]
text = "Continue"

[node name="EndRoundButton" parent="UI/PlayerTextboxes" instance=ExtResource("5_703wq")]
visible = false
material = SubResource("ShaderMaterial_t7w6r")
layout_mode = 2
script = ExtResource("9_d50av")

[node name="Text" parent="UI/PlayerTextboxes/EndRoundButton/TextMargin" index="0"]
text = "End Round"

[node name="DieButton" parent="UI/PlayerTextboxes" instance=ExtResource("5_703wq")]
material = SubResource("ShaderMaterial_2x70x")
layout_mode = 2
script = ExtResource("10_oe7lm")

[node name="Text" parent="UI/PlayerTextboxes/DieButton/TextMargin" index="0"]
text = "Die, Forgotten"

[node name="PayTollButton" parent="UI/PlayerTextboxes" instance=ExtResource("5_703wq")]
material = SubResource("ShaderMaterial_7gvcv")
layout_mode = 2
script = ExtResource("11_mcnia")

[node name="Text" parent="UI/PlayerTextboxes/PayTollButton/TextMargin" index="0"]
text = "Pay Toll (1/20[img=12x13]res://assets/icons/coin_icon.png[/img])[center]"

[node name="VoyageContinueButton" parent="UI/PlayerTextboxes" instance=ExtResource("5_703wq")]
visible = false
material = SubResource("ShaderMaterial_ea1q6")
layout_mode = 2
script = ExtResource("12_dxqog")

[node name="Text" parent="UI/PlayerTextboxes/VoyageContinueButton/TextMargin" index="0"]
text = "Continue"

[node name="BoardButton" parent="UI/PlayerTextboxes" instance=ExtResource("5_703wq")]
visible = false
material = SubResource("ShaderMaterial_2hlmn")
layout_mode = 2
script = ExtResource("13_6rw3p")

[node name="Text" parent="UI/PlayerTextboxes/BoardButton/TextMargin" index="0"]
text = "Board"

[node name="LivesLabel" type="Label" parent="UI"]
texture_filter = 1
offset_left = 2.0
offset_top = 71.0
offset_right = 70.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_om374")
theme_override_font_sizes/font_size = 16
text = "3"
horizontal_alignment = 1
script = ExtResource("15_wj7tb")

[node name="FragmentsLabel" type="Label" parent="UI"]
texture_filter = 1
offset_left = 250.0
offset_top = 71.0
offset_right = 318.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_om374")
text = "5"
horizontal_alignment = 1
script = ExtResource("16_ee6yk")

[node name="ActivePowerLabel" type="RichTextLabel" parent="UI"]
visible = false
texture_filter = 1
offset_left = 76.0
offset_top = 32.0
offset_right = 248.0
offset_bottom = 82.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("14_om374")
bbcode_enabled = true
text = "[center]Power[/center]"
autowrap_mode = 2
script = ExtResource("17_uno8g")

[node name="Voyage" parent="UI" instance=ExtResource("18_vo2di")]
visible = false
position = Vector2(65, 26)

[node name="Table" type="Node2D" parent="."]

[node name="CharonRow" type="Control" parent="Table"]
custom_minimum_size = Vector2(116, 39)
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 75.0
offset_right = 315.0
offset_bottom = 114.0
mouse_filter = 2
script = ExtResource("21_60gfb")

[node name="Coin" parent="Table/CharonRow" instance=ExtResource("22_nqi2l")]
offset_left = 136.0
offset_right = 174.0

[node name="Trial" type="Node2D" parent="Table"]
script = ExtResource("20_kmro7")

[node name="TrialRow" type="Control" parent="Table/Trial"]
custom_minimum_size = Vector2(116, 39)
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 45.0
offset_right = 315.0
offset_bottom = 84.0
mouse_filter = 2
script = ExtResource("21_60gfb")

[node name="Coin" parent="Table/Trial/TrialRow" instance=ExtResource("22_nqi2l")]
offset_left = 77.0
offset_right = 115.0

[node name="Coin2" parent="Table/Trial/TrialRow" instance=ExtResource("22_nqi2l")]
offset_left = 117.0
offset_right = 155.0

[node name="Coin3" parent="Table/Trial/TrialRow" instance=ExtResource("22_nqi2l")]
offset_left = 157.0
offset_right = 195.0

[node name="Coin4" parent="Table/Trial/TrialRow" instance=ExtResource("22_nqi2l")]
offset_left = 197.0
offset_right = 235.0

[node name="CoinRow" parent="Table" instance=ExtResource("19_ym3ga")]
custom_minimum_size = Vector2(310, 39)
offset_top = 110.0
offset_bottom = 149.0

[node name="Shop" type="Node2D" parent="Table"]
script = ExtResource("20_xqqdj")

[node name="ShopRow" type="Control" parent="Table/Shop"]
custom_minimum_size = Vector2(116, 39)
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 40.0
offset_right = 314.0
offset_bottom = 79.0
mouse_filter = 2
script = ExtResource("21_60gfb")

[node name="Coin" parent="Table/Shop/ShopRow" instance=ExtResource("22_nqi2l")]
offset_left = 77.0
offset_right = 115.0

[node name="Coin2" parent="Table/Shop/ShopRow" instance=ExtResource("22_nqi2l")]
offset_left = 117.0
offset_right = 155.0

[node name="Coin3" parent="Table/Shop/ShopRow" instance=ExtResource("22_nqi2l")]
offset_left = 157.0
offset_right = 195.0

[node name="Coin4" parent="Table/Shop/ShopRow" instance=ExtResource("22_nqi2l")]
offset_left = 197.0
offset_right = 235.0

[node name="Arrows" type="Node2D" parent="."]

[node name="LifeFragments" type="Node2D" parent="."]

[node name="SoulFragments" type="Node2D" parent="."]

[node name="Points" type="Node2D" parent="."]

[node name="Charon" type="Node2D" parent="Points"]
position = Vector2(160, -99)

[node name="SoulFragmentPile" type="Node2D" parent="Points"]
position = Vector2(273, 23)

[node name="Player" type="Node2D" parent="Points"]
position = Vector2(160, 210)

[node name="LifeFragmentPile" type="Node2D" parent="Points"]
position = Vector2(24, 31)

[node name="ArrowPile" type="Node2D" parent="Points"]
position = Vector2(16, 158)

[node name="PatronToken" parent="." instance=ExtResource("24_k7xdm")]
offset_left = 254.0
offset_top = 150.0
offset_right = 298.0
offset_bottom = 178.0

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
limit_left = 0
limit_top = 0
limit_right = 320
limit_bottom = 180

[connection signal="clicked" from="UI/PlayerTextboxes/TossButton" to="." method="_on_toss_button_clicked"]
[connection signal="clicked" from="UI/PlayerTextboxes/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="clicked" from="UI/PlayerTextboxes/ShopContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="clicked" from="UI/PlayerTextboxes/ShopRerollButton" to="." method="_on_shop_reroll_button_clicked"]
[connection signal="clicked" from="UI/PlayerTextboxes/EndRoundButton" to="." method="_on_end_round_button_pressed"]
[connection signal="clicked" from="UI/PlayerTextboxes/DieButton" to="." method="_on_die_button_clicked"]
[connection signal="clicked" from="UI/PlayerTextboxes/PayTollButton" to="." method="_on_pay_toll_button_clicked"]
[connection signal="clicked" from="UI/PlayerTextboxes/VoyageContinueButton" to="." method="_on_voyage_continue_button_clicked"]
[connection signal="clicked" from="UI/PlayerTextboxes/BoardButton" to="." method="_on_board_button_clicked"]
[connection signal="child_entered_tree" from="Table/CharonRow" to="Table/CharonRow" method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="Table/CharonRow" to="Table/CharonRow" method="_on_child_exiting_tree"]
[connection signal="child_entered_tree" from="Table/Trial/TrialRow" to="Table/Trial/TrialRow" method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="Table/Trial/TrialRow" to="Table/Trial/TrialRow" method="_on_child_exiting_tree"]
[connection signal="coin_purchased" from="Table/Shop" to="." method="_on_shop_coin_purchased"]
[connection signal="child_entered_tree" from="Table/Shop/ShopRow" to="Table/Shop/ShopRow" method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="Table/Shop/ShopRow" to="Table/Shop/ShopRow" method="_on_child_exiting_tree"]

[editable path="UI/PlayerTextboxes/TossButton"]
[editable path="UI/PlayerTextboxes/AcceptButton"]
[editable path="UI/PlayerTextboxes/ShopContinueButton"]
[editable path="UI/PlayerTextboxes/ShopRerollButton"]
[editable path="UI/PlayerTextboxes/EndRoundButton"]
[editable path="UI/PlayerTextboxes/DieButton"]
[editable path="UI/PlayerTextboxes/PayTollButton"]
[editable path="UI/PlayerTextboxes/VoyageContinueButton"]
[editable path="UI/PlayerTextboxes/BoardButton"]
